--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agencia de viajes el patitio volador </title>
+        <title>Agencia de viajes mi patitio volador </title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Servisios</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Servicios</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Vuelos</a></li>
                      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contacto</a></li>
                     </ul>
@@ -45,7 +45,7 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Servisios</h2>
+                    <h2 class="section-heading text-uppercase">Servicios</h2>
                     <h3 class="section-subheading text-muted">Le Presentamos Nuestros Servicios!</h3>
                 </div>
                 <div class="row text-center">
@@ -55,7 +55,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Ventas en lines </h4>
-                        <p class="text-muted">puedes ralizar tu compra en linea sin tenre que salir de casa</p>
+                        <p class="text-muted">puedes ralizar tu compra en linea sin tener que salir de casa</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -63,7 +63,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Diseño de Respuestas</h4>
-                        <p class="text-muted">Desarrollando un siatema de reespetas automatisadas para una mejor experiencia en nuestra pagina web.</p>
+                        <p class="text-muted">Desarrollando un sistema de respetas automatisadas para una mejor experiencia en nuestra pagina web.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -71,7 +71,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Seguridad e la web</h4>
-                        <p class="text-muted">Para la arerolina mi patito volador la seguridad de nuestros clientes es prioridad lo cual contamos con un alta seguridad web .</p>
+                        <p class="text-muted">Para la aerolina mi patito volador la seguridad de nuestros clientes es prioridad lo cual contamos con un alta seguridad web .</p>
                     </div>
                 </div>
             </div>
@@ -352,7 +352,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Canada EUA</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">mi patito Volador</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="..." />
                                   <p>   Toronto, la capital de la provincia de Ontario, es una importante ciudad de Canadá ubicada a lo largo de la orilla noroeste del lago Ontario. Es una metrópolis dinámica con un centro de rascacielos altos, todos sobrepasados por la icónica Torre CN.</p>
                                     <!--  <ul class="list-inline">
